almost perfect look

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,72 +169,86 @@
             <button class="fa fa-list-ol" title="Ordered list"></button>
         </div>
     </div>
-    <div class="heading">
-        <h1>Lorem ipsum</h1>
-    </div>
-    <article id="content">
+    <section class="page-wrapper">
+        <div class="heading">
+            <h1>Lorem ipsum</h1>
+        </div>
+        <article id="content">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda aut, facere facilis, id ipsum
-            laborum, nam natus non provident quae quod ratione recusandae. Architecto enim eos in inventore provident?
-        </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda aut, facere facilis, id ipsum
+                laborum, nam natus non provident quae quod ratione recusandae. Architecto enim eos in inventore
+                provident?
+            </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error officia pariatur tenetur.
-            Aspernatur blanditiis corporis ea, illo illum nesciunt odio, officiis optio praesentium repellendus sequi
-            tempora tenetur totam vel.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error officia pariatur tenetur.
+                Aspernatur blanditiis corporis ea, illo illum nesciunt odio, officiis optio praesentium repellendus
+                sequi
+                tempora tenetur totam vel.</p>
 
-        <h2>Dolor sit amet</h2>
+            <h2>Dolor sit amet</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at autem doloribus error facilis
-            itaque labore laudantium nihil, numquam quis quos, repudiandae sunt veniam? Cum nam nihil officia
-            quas repudiandae!</p>
-        <ul>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore doloribus
-                explicabo,
-                ipsum labore minima molestiae non pariatur quo rem, saepe vero voluptatum! A aliquid cupiditate dolorum
-                iste
-                veniam.
-            </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur, cum dolorum enim, error
-                expedita facilis ipsam ipsum laudantium magnam molestias natus officia officiis provident quia quidem
-                reiciendis tempora voluptates.
-            </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, corporis cum cupiditate,
-                debitis
-                ea est ex illo laboriosam nesciunt odit officia omnis quam quod, vitae. Accusantium at fuga molestias.
-            </li>
-            <li>Github OAuth 2.0 <a href="#">demo</a></li>
-            <li>Google OAuth 2.0 <a href="#">demo</a></li>
-            <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
-        </ul>
-        <ol>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad alias delectus doloremque,
-                esse
-                eum excepturi explicabo illum laudantium magnam maiores nemo nostrum quam quasi reprehenderit soluta,
-                ut,
-                voluptas.
-            </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos in necessitatibus omnis vero! Autem
-                blanditiis
-                repudiandae soluta vel voluptatem? Cupiditate dolores enim explicabo laborum magni nihil pariatur quam
-                quas
-                reiciendis.
-            </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquam doloremque laborum maxime
-                molestiae reiciendis similique. Adipisci deleniti dignissimos dolor error, esse fuga perferendis placeat
-                repudiandae sapiente similique tempora.
-            </li>
-            <li>Github OAuth 2.0 <a href="#">demo</a></li>
-            <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
-        </ol>
-        <ul>
-            <li class="todo-item"><input type="checkbox" checked disabled>Cats</li>
-            <li class="todo-item"><input type="checkbox" disabled>Dogs</li>
-            <li class="todo-item"><input type="checkbox" disabled>Birds</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, <code>consectetur adipisicing elit</code>. Alias est et facilis fugit illum iusto
-            laborum quibusdam, voluptatibus? Assumenda consequuntur in modi nemo optio quia, quis rerum sapiente velit
-            veritatis?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at autem doloribus error facilis
+                itaque labore laudantium nihil, numquam quis quos, repudiandae sunt veniam? Cum nam nihil officia
+                quas repudiandae!</p>
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore doloribus
+                    explicabo,
+                    ipsum labore minima molestiae non pariatur quo rem, saepe vero voluptatum! A aliquid cupiditate
+                    dolorum
+                    iste
+                    veniam.
+                </li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur, cum dolorum enim,
+                    error
+                    expedita facilis ipsam ipsum laudantium magnam molestias natus officia officiis provident quia
+                    quidem
+                    reiciendis tempora voluptates.
+                </li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, corporis cum cupiditate,
+                    debitis
+                    ea est ex illo laboriosam nesciunt odit officia omnis quam quod, vitae. Accusantium at fuga
+                    molestias.
+                </li>
+                <li>Github OAuth 2.0 <a href="#">demo</a></li>
+                <li>Google OAuth 2.0 <a href="#">demo</a></li>
+                <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
+            </ul>
+            <ol>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad alias delectus
+                    doloremque,
+                    esse
+                    eum excepturi explicabo illum laudantium magnam maiores nemo nostrum quam quasi reprehenderit
+                    soluta,
+                    ut,
+                    voluptas.
+                </li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos in necessitatibus omnis vero! Autem
+                    blanditiis
+                    repudiandae soluta vel voluptatem? Cupiditate dolores enim explicabo laborum magni nihil pariatur
+                    quam
+                    quas
+                    reiciendis.
+                </li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquam doloremque laborum
+                    maxime
+                    molestiae reiciendis similique. Adipisci deleniti dignissimos dolor error, esse fuga perferendis
+                    placeat
+                    repudiandae sapiente similique tempora.
+                </li>
+                <li>Github OAuth 2.0 <a href="#">demo</a></li>
+                <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
+            </ol>
+            <ul>
+                <li class="todo-item"><input type="checkbox" checked disabled>Cats</li>
+                <li class="todo-item"><input type="checkbox" disabled>Dogs</li>
+                <li class="todo-item"><input type="checkbox" disabled>Birds</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, <code>consectetur adipisicing elit</code>. Alias est et facilis fugit illum
+                iusto
+                laborum quibusdam, voluptatibus? Assumenda consequuntur in modi nemo optio quia, quis rerum sapiente
+                velit
+                veritatis?</p>
             <pre>
 Gello {
     color: green;
@@ -249,14 +263,16 @@ Gello {
     margin-right: 12px;
 }
            </pre>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore</p>
-    </article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore</p>
+        </article>
+    </section>
     <div class="clearfix"></div>
+
+    <footer class="page-wrapper">
+        <p>Copyright &copy; 2015 Jar Jar Binks. Powered by <a href="//github.com/sulnedinfind/ebauche.go">Ebauche wiki
+            engine.</a></p>
+    </footer>
 </div>
-<footer class="page">
-    <p>Copyright &copy; 2015 Jar Jar Binks. Powered by <a href="//github.com/sulnedinfind/ebauche.go">Ebauche wiki
-        engine.</a></p>
-</footer>
 <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 <script>
     $(document).ready(function () {
