--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
                         <form class="popup remove" method="delete" action="/wiki">
                             <button class="link close fa fa-times smallish" type="reset"></button>
                             <input type="hidden" name="id" value="/boom-boom-usage">
+
                             <div class="field">
                                 <label>
                                     <input type="radio" name="mode" value="recursive" checked>
@@ -48,6 +49,7 @@
                             <button class="link close fa fa-times smallish" type="reset"></button>
                             <p>Create a node with title:</p>
                             <input type="hidden" name="parent" value="/boom-boom-usage">
+
                             <div class="field">
                                 <input type="text" name="title" placeholder="Title" required>
                             </div>
@@ -198,29 +200,31 @@
             <button class="link fa fa-list-ol" title="Ordered list"></button>
         </div>
     </div>
-    <section class="page-wrapper">
-        <div class="heading">
-            <h1>Lorem ipsum</h1>
+    <article class="article">
+        <div class="article__heading">
+            <h1 class="article__header">Lorem ipsum</h1>
         </div>
-        <article id="content">
+        <section class="article__section" id="content">
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda aut, facere facilis, id ipsum
+            <p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda aut,
+                facere facilis, id ipsum
                 laborum, nam natus non provident quae quod ratione recusandae. Architecto enim eos in inventore
                 provident?
             </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error officia pariatur tenetur.
+            <p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error officia pariatur tenetur.
                 Aspernatur blanditiis corporis ea, illo illum nesciunt odio, officiis optio praesentium repellendus
                 sequi
                 tempora tenetur totam vel.</p>
+        </section>
+        <section class="article__section">
+            <h2 class="article__header2">Dolor sit amet</h2>
 
-            <h2>Dolor sit amet</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at autem doloribus error facilis
+            <p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at autem doloribus error facilis
                 itaque labore laudantium nihil, numquam quis quos, repudiandae sunt veniam? Cum nam nihil officia
                 quas repudiandae!</p>
-            <ul>
-                <li>
+            <ul class="article__unodered-list">
+                <li class="article__unodered-list-item">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore doloribus
                     explicabo,
                     ipsum labore minima molestiae non pariatur quo rem, saepe vero voluptatum! A aliquid cupiditate
@@ -228,23 +232,23 @@
                     iste
                     veniam.
                 </li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur, cum dolorum enim,
+                <li class="article__unodered-list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur, cum dolorum enim,
                     error
                     expedita facilis ipsam ipsum laudantium magnam molestias natus officia officiis provident quia
                     quidem
                     reiciendis tempora voluptates.
                 </li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, corporis cum cupiditate,
+                <li class="article__unodered-list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, corporis cum cupiditate,
                     debitis
                     ea est ex illo laboriosam nesciunt odit officia omnis quam quod, vitae. Accusantium at fuga
                     molestias.
                 </li>
-                <li>Github OAuth 2.0 <a href="#">demo</a></li>
-                <li>Google OAuth 2.0 <a href="#">demo</a></li>
-                <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
+                <li class="article__unodered-list-item">Github OAuth 2.0 <a class="article__internal-link" href="#">demo</a></li>
+                <li class="article__unodered-list-item">Google OAuth 2.0 <a class="article__internal-link" href="#">demo</a></li>
+                <li class="article__unodered-list-item">Google OpenId 2.0 <a class="article__external-link" href="example.org">demo</a></li>
             </ul>
-            <ol>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad alias delectus
+            <ol class="article__ordered-list">
+                <li class="article__odered-list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad alias delectus
                     doloremque,
                     esse
                     eum excepturi explicabo illum laudantium magnam maiores nemo nostrum quam quasi reprehenderit
@@ -252,28 +256,28 @@
                     ut,
                     voluptas.
                 </li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos in necessitatibus omnis vero! Autem
+                <li class="article__odered-list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos in necessitatibus omnis vero! Autem
                     blanditiis
                     repudiandae soluta vel voluptatem? Cupiditate dolores enim explicabo laborum magni nihil pariatur
                     quam
                     quas
                     reiciendis.
                 </li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquam doloremque laborum
+                <li class="article__odered-list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aliquam doloremque laborum
                     maxime
                     molestiae reiciendis similique. Adipisci deleniti dignissimos dolor error, esse fuga perferendis
                     placeat
                     repudiandae sapiente similique tempora.
                 </li>
-                <li>Github OAuth 2.0 <a href="#">demo</a></li>
-                <li>Google OpenId 2.0 <a href="example.org">demo</a></li>
+                <li class="article__odered-list-item">Github OAuth 2.0 <a href="#">demo</a></li>
+                <li class="article__odered-list-item">Google OpenId 2.0 <a href="example.org">demo</a></li>
             </ol>
-            <ul>
-                <li class="todo-item"><input type="checkbox" checked disabled>Cats</li>
-                <li class="todo-item"><input type="checkbox" disabled>Dogs</li>
-                <li class="todo-item"><input type="checkbox" disabled>Birds</li>
+            <ul class="article__todo-list">
+                <li class="article__todo-list-item"><input class="article__todo-list-checkbox" type="checkbox" checked disabled>Cats</li>
+                <li class="article__todo-list-item"><input class="article__todo-list-checkbox" type="checkbox" disabled>Dogs</li>
+                <li class="article__todo-list-item"><input class="article__todo-list-checkbox" type="checkbox" disabled>Birds</li>
             </ul>
-            <p>Lorem ipsum dolor sit amet, <code>consectetur adipisicing elit</code>. Alias est et facilis fugit illum
+            <p class="article__paragraph">Lorem ipsum dolor sit amet, <code>consectetur adipisicing elit</code>. Alias est et facilis fugit illum
                 iusto
                 laborum quibusdam, voluptatibus? Assumenda consequuntur in modi nemo optio quia, quis rerum sapiente
                 velit
@@ -293,8 +297,8 @@ Gello {
 }
            </pre>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores delectus dolore</p>
-        </article>
-    </section>
+        </section>
+    </article>
     <div class="clearfix"></div>
 
     <footer class="page-wrapper">
@@ -311,7 +315,7 @@ Gello {
         $(document).on('mousedown', function (e) {
             const $popup = $(e.target).closest('.popup');
 
-            if ($popup.length){
+            if ($popup.length) {
                 $popup.one().addClass('active');
             } else {
                 $('.popup').each(function () {
